k8s/Components/network-policies/observability/observability-allow-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tracing-to-zipkin
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app: zipkin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
